--- a/app/templates/sometest/make_mc12101_nmpu1_gcc/Makefile
+++ b/app/templates/sometest/make_mc12101_nmpu1_gcc/Makefile
@@ -53,7 +53,7 @@ include 		 nmc4vars_win.mk
 PROJECT          = main1
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
-INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
+INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include -I$(ROOT)/utilities/include -I$(ROOT)/context/include
 SRC_DIRS 		 = $(ROOT)/src_proc1/nm ..
 LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L"../../../../lib"
 TMP_DIR          = Release
@@ -62,7 +62,7 @@ CC 				 = nmc-g++
 AS               = nmc-as 				 
 AS_FLAGS    	 = -q -split_sir -nmc4_fixed
 CC_FLAGS		 = -std=c++11 -fno-builtin-printf
-LIBS             = -lnmopengl-nmc4 -lnmpp-nmc4 -lhal-mc12101 
+LIBS             = -lnmopengl_nmc4 -lnmpp-nmc4 -lhal-mc12101 
 LINKER_FLAGS     =   -Xlinker -Map=.main1.map $(LIB_DIRS) "-Wl,-Tldscript-nmc1.ld"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
 #=================== SOURCE & OBJECTS COLLECTION ===========================
 
@@ -83,7 +83,7 @@ OBJECTS_C   = $(notdir $(patsubst %.c,%.o,$(ALL_C)))
 OBJECTS     = $(addprefix $(TMP_DIR)/, $(OBJECTS_C) $(OBJECTS_CPP)  $(OBJECTS_ASM))
 
 #======================== BUILD RULES ====================================
-.PHONY:all  clean skip
+.PHONY:all  clean skip lib
 
 .DEFAULT_GOAL=default
 default: $(TARGET) 
@@ -101,8 +101,11 @@ run: $(TARGET)
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) nmc4vars_win.mk Makefile
+$(TARGET): $(TMP_DIR) $(OBJECTS) nmc4vars_win.mk Makefile lib
 	$(CC) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
+
+lib:
+	$(MAKE) -C $(ROOT)/make fixed 
 
 nmc4vars_win.mk:
 	copy "$(NMC_GCC_TOOLPATH)\nmc4-ide\include\nmc4vars_win.mk" nmc4vars_win.mk
