--- a/context/tests/SConstruct
+++ b/context/tests/SConstruct
@@ -1,4 +1,4 @@
 
 
-SConscript(['float/SConscript', 'float/SConscript_x86',
-			'fixed/SConscript', 'fixed/SConscript_x86'])
+#SConscript(['float/SConscript', 'float/SConscript_x86',
+#			'fixed/SConscript', 'fixed/SConscript_x86'])
