--- a/make/Makefile
+++ b/make/Makefile
@@ -37,12 +37,12 @@ AR_FLAGS         = rcs $(TARGET)
 
 ifeq ($(ARCH),nmc4_float)
 SRC_DIRS         = $(ROOT)/src_proc0/nm $(ROOT)/src_proc0/common $(ROOT)/src_proc0/nmgl $(ROOT)/utilities/src/float $(ROOT)/utilities/src/common $(ROOT)/context/src/float
-CC_FLAGS 	     = -mnmc4-float $(INC_DIRS) -O0
-AS_FLAGS         = -mnmc4-float
+CC_FLAGS 	     = -mnmc4-float -O0 -g
+AS_FLAGS         = -mnmc4-float -g
 else ifeq ($(ARCH),nmc4_fixed)
 SRC_DIRS         = $(ROOT)/src_proc1/nm $(ROOT)/src_proc1/common $(ROOT)/utilities/src/fixed $(ROOT)/utilities/src/common $(ROOT)/context/src/fixed
-CC_FLAGS 	     = -mnmc4-fixed $(INC_DIRS) -O2
-AS_FLAGS         = -mnmc4-fixed
+CC_FLAGS 	     = -mnmc4-fixed -O2 -g
+AS_FLAGS         = -mnmc4-fixed -g
 endif
 CXX_FLAGS	 	 = -std=c++11
 C_FLAGS 	 	 = -std=c99
@@ -120,10 +120,10 @@ $(TMP_DIR)/%.o: %.cpp Makefile
 #$(CC) -MM $(CC_FLAGS) $(CXX_FLAGS) $(INC_DIRS) $(<) >  $(@).d
 	
 $(TMP_DIR)/%.o: %.asm Makefile
-	$(AS) $(AS_FLAGS) -c -mmas -Wa,-split_sir $(<) -o$(@) $(ERRECHO)
+	$(AS) -c $(AS_FLAGS) -mmas -Wa,-split_sir $(<) -o$(@) $(ERRECHO)
 
 $(TMP_DIR)/%.o: %.s Makefile
-	$(AS) $(AS_FLAGS) -c -mgas $(<) -o$(@) $(ERRECHO)
+	$(AS) -c $(AS_FLAGS) -mgas $(<) -o$(@) $(ERRECHO)
 	
 
 #========================== cleanup ===================
