Fix nmgltex_tests build files
This commit updates build files for app/nmgltex_tests so they
correspond to current repository structure.

--- a/app/nmgltex_tests/make_mc12101/Makefile
+++ b/app/nmgltex_tests/make_mc12101/Makefile
@@ -71,15 +71,10 @@ drun: OUT_DIR=Debug
 drun:$(TARGET0) $(TARGET1) $(HOST)
 	bin\$(PLATFORM)\$(OUT_DIR)\$(HOST)-$(PLATFORM)$(DEBUG_SUFFIX)
 libs:
-	
-	$(MAKE) -C $(ROOT)/make/nmopengl-nmc4 -f ./Makefile clean
-	$(MAKE) -C $(ROOT)/make/nmopengl-nmc4 -f ./Makefile
-	
-	$(MAKE) -C $(ROOT)/make/nmopengl-nmc4f -f ./Makefile clean
-	$(MAKE) -C $(ROOT)/make/nmopengl-nmc4f -f ./Makefile
-	
-	$(MAKE) -C $(ROOT)/make/nmopengl-x86-x64 -f ./Makefile kill
-	$(MAKE) -C $(ROOT)/make/nmopengl-x86-x64 -f ./Makefile
+	$(MAKE) -C $(ROOT)/make kill
+	$(MAKE) -C $(ROOT)/make float 
+	$(MAKE) -C $(ROOT)/make fixed 
+	$(MAKE) -C $(ROOT)/make x86 
 	
 clean:
 	rm -rf bin obj $(TEMP_DIR)
