Move repackToPrimitives_t[sf] functions into the context folder
* Move repackToPrimitives_t[sf] declarations from service.h to primitive.h
  because primitive.h contains TrianglePointers type
* Move repackToPrimitives_t[sf].asm to context/float
* Move repackToPrimitives_t[sf].cpp to context/float/pc
* Move repackToPrimitives_t[sf] unit-tests to context/tests/float
* Add f"_CRT_DECLARE_NONSTDC_NAMES=0" to env['CPPDEFINES'] in SConscript_x86
  to prevent the redefition of arrays in cullFaceTriangles/main.cpp (y0, ...)
* Add primitive.h to the testperf headers to build repack perf tests

--- a/test/perf/mai/Makefile
+++ b/test/perf/mai/Makefile
@@ -8,6 +8,7 @@ all_mc12101: configure0 configure1
 configure0 config_nmpu0:
 	testperf config -i ../../../include/nmgltex_nm0.h -b make_mc12101_nmpu0-ld
 	testperf config -i ../../../include/service.h -b make_mc12101_nmpu0-ld
+	testperf config -i ../../../context/include/primitive.h -b make_mc12101_nmpu0-ld
 	testperf config -i ../../../utilities/include/utility_float.h -b make_mc12101_nmpu0-ld
 
 configure1 config_nmpu1:
