added submodule vshell, Makefiles++

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "nmpp"]
 	path = nmpp
 	url = https://github.com/RC-MODULE/nmpp.git
+[submodule "vshell"]
+	path = vshell
+	url = https://github.com/RC-MODULE/vshell.git
 [submodule "hal"]
 	path = hal
 	url = https://github.com/RC-MODULE/hal.git
