--- a/texture-demo-gcc/make_mc12101/Makefile0
+++ b/texture-demo-gcc/make_mc12101/Makefile0
@@ -46,6 +46,9 @@ ROOT = ../..
 
 #============== PROJECT & BUILD CONFIGURATION ==========
 #
+HAL ?= $(ROOT)/hal
+NMPP ?= $(ROOT)/nmpp
+VSHELL ?= $(ROOT)/vshell
 
 
 
